# schema-searcher

./: .gitignore  Cargo.toml  README.md
examples/: bq_test.rs
src/: lib.rs  main.rs  ref.rs
src/bigquery/: client.rs  types.rs
src/io/: cli.rs  fuzzy.rs  mod.rs  writer.rs
