[package]
name = "schema-searcher"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
yup-oauth2 = "12.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
skim = { version = "2.0.2", default-features = false, features = ["cli"] }
inquire = "0.9.3"
colorize = "0.1.0"
